# degreepilot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  start.sh
apps/api/: README.md  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/routes/: __init__.py  admin.py  advisor.py  audit.py  courses.py  health.py  plans.py  requirements.py  students.py
apps/api/app/core/: config.py  db.py  terms.py
apps/api/app/models/: __init__.py  accuracy.py  course.py  directory_sync.py  plan.py  requirement.py  student.py
apps/api/app/schemas/: __init__.py  advisor.py  audit.py  course.py  plan.py  requirement.py  student.py
apps/api/app/seed/: __init__.py  courses.py  demo_student.py  expand.py  loader.py  requirements.py  requirements_more_majors.py  requirements_ms_tracks.py  runner.py
apps/api/app/seed/data/: bulletin_core_arthum.json  (+21 more)
apps/api/app/services/: accuracy.py
apps/api/app/static/: accuracy.html
apps/api/scripts/: scrape_catalog.py
apps/api/tests/: conftest.py  test_accuracy_api.py  test_advisor.py  test_agents.py  test_audit.py  test_bulletin_parser.py  test_comparator.py  test_cs_faq_parser.py  test_cs_pathways_parser.py  test_directory_parser.py  test_expand_requirements.py  test_loader.py  test_more_majors.py  test_ms_tracks.py  test_overlays.py  test_planner.py  test_prereq_graph.py  test_scorers.py  test_scrape_snapshots.py  test_stage3_programs.py  test_syncer.py  test_validator.py
apps/api/tests/fixtures/: bulletin_sample.html  coms_fall2026.html  ms_faq_sample.html  ms_pathway_sample.html
(+64 files in other folders)
